--- a/helm/decisionlens/templates/apigateway.yaml
+++ b/helm/decisionlens/templates/apigateway.yaml
@@ -17,6 +17,13 @@ spec:
       containers:
       - name: apigateway
         image: {{ .Values.service.image.url }}/{{ .Values.service.apigateway.tag }}
+        resources:
+          requests:
+            memory: "1000Mi"
+            cpu: "1000m"
+          limits:
+            memory: "4000Mi"
+            cpu: "2000m"
         ports:
         - containerPort: {{ .Values.service.apigateway.port }}           
         env: 
