--- a/helm/decisionlens/templates/dlcui.yaml
+++ b/helm/decisionlens/templates/dlcui.yaml
@@ -17,6 +17,13 @@ spec:
       containers:
       - name: dlcui
         image: {{ .Values.service.image.url }}/{{ .Values.service.dlcui.tag }}
+        resources:
+          requests:
+            memory: "1000Mi"
+            cpu: "1000m"
+          limits:
+            memory: "4000Mi"
+            cpu: "2000m"
         imagePullPolicy: Always
         ports:
         - containerPort: {{ .Values.service.dlcui.port }}
