--- a/helm/decisionlens/templates/dlxui.yaml
+++ b/helm/decisionlens/templates/dlxui.yaml
@@ -17,6 +17,13 @@ spec:
       containers:
       - name: dlxui
         image: {{ .Values.service.image.url }}/{{ .Values.service.dlxui.tag }}
+        resources:
+          requests:
+            memory: "1000Mi"
+            cpu: "1000m"
+          limits:
+            memory: "4000Mi"
+            cpu: "2000m"
         ports:
         - containerPort: {{ .Values.service.dlxui.port }}
         env:
