--- a/helm/decisionlens/templates/plan.yaml
+++ b/helm/decisionlens/templates/plan.yaml
@@ -23,6 +23,13 @@ spec:
       containers:
       - name: plan
         image: {{ .Values.service.image.url }}/{{ .Values.service.plan.tag }}
+        resources:
+          requests:
+            memory: "2000Mi"
+            cpu: "2000m"
+          limits:
+            memory: "8000Mi"
+            cpu: "4000m"
         ports:
         - containerPort: {{ .Values.service.plan.port }}    
         imagePullPolicy: Always
