--- a/helm/decisionlens/templates/portfolio.yaml
+++ b/helm/decisionlens/templates/portfolio.yaml
@@ -23,6 +23,13 @@ spec:
       containers:
       - name: portfolio
         image: {{ .Values.service.image.url }}/{{ .Values.service.portfolio.tag }}
+        resources:
+          requests:
+            memory: "2000Mi"
+            cpu: "2000m"
+          limits:
+            memory: "8000Mi"
+            cpu: "4000m"
         ports:
         - containerPort: {{ .Values.service.portfolio.port }}    
         imagePullPolicy: Always
