--- a/helm/decisionlens/templates/dlc.yaml
+++ b/helm/decisionlens/templates/dlc.yaml
@@ -4,15 +4,26 @@ metadata:
   name: dlc-deployment
   labels:
     app: dlc
+    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+  annotations:
+  {{- with .Values.global.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.service.dlc.replicas }}
   selector:
     matchLabels:
       app: dlc
+      {{- include "decisionlens.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: dlc
+        {{- include "decisionlens.selectorLabels" . | nindent 8 }}
+      annotations:
+      {{- with .Values.global.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
     spec:
       {{ if .Values.jwt.publicKey }}
       volumes:
@@ -148,20 +159,12 @@ spec:
         - name: jwt.publicKey
           value: /jwt-keys/public_key.pub
         {{ end }}
-
+      {{- if .Values.serviceAccount.create }}
+      serviceAccountName: dlc-service
+      {{- end }}
       imagePullSecrets:
-      - name: regcred
+      {{- with .Values.global.imagePullSecrets }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
 
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: dlc-service
-spec:
-  selector:
-    app: dlc
-  ports:
-  - protocol: TCP
-    port: {{ .Values.service.dlc.port }}
-    targetPort: {{ .Values.service.dlc.port }}
 
