--- a/helm/decisionlens/templates/apigateway.yaml
+++ b/helm/decisionlens/templates/apigateway.yaml
@@ -4,15 +4,26 @@ metadata:
   name: apigateway-deployment
   labels:
     app: apigateway
+    {{- include "decisionlens.labels" . | nindent 4 }}
+  annotations:
+  {{- with .Values.global.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.service.apigateway.replicas }}
   selector:
     matchLabels:
       app: apigateway
+      {{- include "decisionlens.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: apigateway
+        {{- include "decisionlens.selectorLabels" . | nindent 8 }}
+      annotations:
+      {{- with .Values.global.podAnnotations }}
+        {{- toYaml . | nindent 6 }}
+      {{- end }}
     spec:
       containers:
       - name: apigateway
@@ -68,20 +79,11 @@ spec:
             configMapKeyRef:
               name: {{ .Release.Name }}-configmap
               key: dlc-service-url  
-
+      {{- if .Values.serviceAccount.create }}
+      serviceAccountName: apigateway-service
+      {{- end }}
       imagePullSecrets:
-      - name: regcred          
-
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: apigateway-service
-spec:
-  selector:
-    app: apigateway
-  ports:
-  - protocol: TCP
-    port: {{ .Values.service.apigateway.port }}
-    targetPort: {{ .Values.service.apigateway.port }}
+      {{- with .Values.global.imagePullSecrets }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
 
