--- a/helm/decisionlens/templates/configmap.yaml
+++ b/helm/decisionlens/templates/configmap.yaml
@@ -2,6 +2,8 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: {{ .Release.Name }}-configmap
+  labels:
+    {{- include "decisionlens.labels.standard" . | nindent 4 }}
 data: 
   database-host: {{ .Values.database.host | quote }}
   database-port: {{ .Values.database.port | quote }}
