--- a/helm/decisionlens/templates/dlcui.yaml
+++ b/helm/decisionlens/templates/dlcui.yaml
@@ -4,15 +4,26 @@ metadata:
   name: dlcui-deployment
   labels:
     app: dlcui
+    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+  annotations:
+  {{- with .Values.global.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.service.dlcui.replicas }}
   selector:
     matchLabels:
       app: dlcui
+      {{- include "decisionlens.labels.standard" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: dlcui
+        {{- include "decisionlens.labels.standard" . | nindent 8 }}
+      annotations:
+      {{- with .Values.global.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
     spec:      
       containers:
       - name: dlcui
@@ -43,20 +54,12 @@ spec:
             configMapKeyRef:
               name: {{ .Release.Name }}-configmap
               key: dlx-api-url
+      {{- if .Values.serviceAccount.create }}
+      serviceAccountName: dlcui-service
+      {{- end }}
       imagePullSecrets:
-      - name: regcred
+      {{- with .Values.global.imagePullSecrets }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
 
-
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: dlcui-service
-spec:
-  selector:
-    app: dlcui
-  ports:
-  - protocol: TCP
-    port: {{ .Values.service.dlcui.port }}
-    targetPort: {{ .Values.service.dlcui.port }}
 
