--- a/helm/decisionlens/templates/messaging.yaml
+++ b/helm/decisionlens/templates/messaging.yaml
@@ -4,15 +4,26 @@ metadata:
   name: messaging-deployment
   labels:
     app: messaging
+    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+  {{- with .Values.global.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.service.messaging.replicas }}
   selector:
     matchLabels:
       app: messaging
+      {{- include "decisionlens.labels.standard" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: messaging
+        {{- include "decisionlens.labels.standard" . | nindent 8 }}
+      {{- with .Values.global.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
     spec:
       {{ if .Values.jwt.publicKey }}
       volumes:
@@ -116,20 +127,12 @@ spec:
         - name: jwt.publicKey
           value: /jwt-keys/public_key.pub
         {{ end }}
+      {{- if .Values.serviceAccount.create }}
+      serviceAccountName: messaging-service
+      {{- end }}
       imagePullSecrets:
-      - name: regcred    
+      {{- with .Values.global.imagePullSecrets }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
 
-
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: messaging-service
-spec:
-  selector:
-    app: messaging
-  ports:
-  - protocol: TCP
-    port: {{ .Values.service.messaging.port }} 
-    targetPort: {{ .Values.service.messaging.port }}
 
