--- a/helm/decisionlens/templates/mldata.yaml
+++ b/helm/decisionlens/templates/mldata.yaml
@@ -4,15 +4,26 @@ metadata:
   name: mldata-deployment
   labels:
     app: mldata
+    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+  annotations:
+    {{- with .Values.global.annotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   replicas: {{ .Values.service.mldata.replicas }}
   selector:
     matchLabels:
       app: mldata
+      {{- include "decisionlens.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: mldata
+        {{- include "decisionlens.selectorLabels" . | nindent 8 }}
+      {{- with .Values.global.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
     spec:
       {{ if .Values.jwt.publicKey }}
       volumes:
@@ -128,20 +139,12 @@ spec:
         - name: jwt.publicKey
           value: /jwt-keys/public_key.pub
         {{ end }}
+      {{- if .Values.serviceAccount.create }}
+      serviceAccountName: mldata-service
+      {{- end }}
       imagePullSecrets:
-      - name: regcred    
+      {{- with .Values.global.imagePullSecrets }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
 
-
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: mldata-service
-spec:
-  selector:
-    app: mldata
-  ports:
-  - protocol: TCP
-    port: {{ .Values.service.mldata.port }} 
-    targetPort: {{ .Values.service.mldata.port }}
 
