--- a/helm/decisionlens/templates/integration-service.yaml
+++ b/helm/decisionlens/templates/integration-service.yaml
@@ -3,6 +3,9 @@ kind: Service
 apiVersion: v1
 metadata:
   name: integration-service
+  labels:
+    app: integration
+    {{- include "decisionlens.labels.standard" . | nindent 4 }}
 spec:
   selector:
     app: integration
