--- a/helm/decisionlens/templates/auth.yaml
+++ b/helm/decisionlens/templates/auth.yaml
@@ -5,8 +5,8 @@ metadata:
   labels: 
     app: auth
     {{- include "decisionlens.labels.standard" . | nindent 4 }}
-  {{- with .Values.global.annotations }}
   annotations:
+  {{- with .Values.global.annotations }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
@@ -20,8 +20,8 @@ spec:
       labels:
         app: auth
         {{- include "decisionlens.selectorLabels" . | nindent 8 }}
-      {{- with .Values.global.podAnnotations }}
       annotations:
+      {{- with .Values.global.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
@@ -163,7 +163,7 @@ spec:
         - name: jwt.publicKey
           value: /jwt-keys/public_key.pub
         {{ end }}
-      {{- if .Values.serviceAccount.create }}
+      {{- if .Values.global.serviceAccount.create }}
       serviceAccountName: auth-service
       {{- end }}
       imagePullSecrets:
