--- a/helm/decisionlens/templates/dlc.yaml
+++ b/helm/decisionlens/templates/dlc.yaml
@@ -159,7 +159,7 @@ spec:
         - name: jwt.publicKey
           value: /jwt-keys/public_key.pub
         {{ end }}
-      {{- if .Values.serviceAccount.create }}
+      {{- if .Values.global.serviceAccount.create }}
       serviceAccountName: dlc-service
       {{- end }}
       imagePullSecrets:
