--- a/helm/decisionlens/templates/mldata.yaml
+++ b/helm/decisionlens/templates/mldata.yaml
@@ -139,7 +139,7 @@ spec:
         - name: jwt.publicKey
           value: /jwt-keys/public_key.pub
         {{ end }}
-      {{- if .Values.serviceAccount.create }}
+      {{- if .Values.global.serviceAccount.create }}
       serviceAccountName: mldata-service
       {{- end }}
       imagePullSecrets:
