--- a/helm/decisionlens/values.yaml
+++ b/helm/decisionlens/values.yaml
@@ -1,3 +1,11 @@
+global:
+  imagePullSecrets:
+  - name: regcred
+  annotations: {}
+  podAnnotations: {} 
+  serviceAccount:
+    create: True
+
 ingress:
   dlx:
     annotations: {}
@@ -64,6 +72,11 @@ rabbitmq:
   stompPort: 61613
   username: guest
   password: guest
+  service:
+    type: LoadBalancer
+  podAnnotations: {}
+  labels: {}
+  selectorLabels: {}
 
 database:
   host: 10.0.0.17
@@ -105,11 +118,3 @@ access:
   token:
     header: Authorization
 
-serviceAccount:
-  create: false
-
-global:
-  imagePullSecrets:
-  - name: regcred
-  annotations: {}
-  podAnnotations: {} 
