add independent annotations and labels per service

--- a/helm/decisionlens/templates/auth-serviceaccount.yaml
+++ b/helm/decisionlens/templates/auth-serviceaccount.yaml
@@ -5,7 +5,7 @@ kind: ServiceAccount
 metadata:
   name: auth-service
   namespace: {{ .Release.Namespace }}
-  labels: {{- include "decisionlens.labels.standard" . | nindent 4 }}
+  labels: {{- include "decisionlens.labels" . | nindent 4 }}
     app: auth
   annotations: {}
 {{- end  }}
