--- a/helm/decisionlens/templates/rabbitmq-service.yaml
+++ b/helm/decisionlens/templates/rabbitmq-service.yaml
@@ -4,11 +4,17 @@ apiVersion: v1
 metadata:
   name: rabbitmq-service
   labels:
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.rabbitmq.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   selector:
     app: rabbitmq
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.selectorLabels" . | nindent 4 }}
+  {{- with .Values.rabbitmq.selectorLabels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   type: {{ .Values.rabbitmq.service.type | default "LoadBalancer" }}
   ports: 
   - name: port-5672
