--- a/helm/decisionlens/templates/rabbitmq-serviceaccount.yaml
+++ b/helm/decisionlens/templates/rabbitmq-serviceaccount.yaml
@@ -7,6 +7,6 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels: 
     app: rabbitmq
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
   annotations: {}
 {{- end  }}
