--- a/helm/decisionlens/values.yaml
+++ b/helm/decisionlens/values.yaml
@@ -4,7 +4,7 @@ global:
   annotations: {}
   podAnnotations: {} 
   serviceAccount:
-    create: True
+    create: false
 
 ingress:
   dlx:
@@ -20,50 +20,80 @@ service:
     port: 9000
     url: http://integration-service:9000
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
   portfolio:
     tag: decisionlens_downloads:portfolio-service_5.8.0
     port: 9001
     url: http://portfolio-service:9001
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
   mldata:
     tag: decisionlens_downloads:mldata-service_3.1.1
     port: 9002
     url: http://mldata-service:9002
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
   plan:
     tag: decisionlens_downloads:plan-service_4.2.5
     port: 9003
     url: http://plan-service:9003
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
   messaging:
     tag: decisionlens_downloads:messaging-service_3.7.2
     port: 9004
     url: http://messaging-service:9004
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
   apigateway:
     tag: decisionlens_downloads:apigateway-service_4.7.2
     version: master
     port: 9005
     url: http://apigateway-service:9005
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
   auth:
     tag: decisionlens_downloads:auth-service_4.2.0
     port: 9006
     url: http://auth-service:9006
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
   dlxui:
     tag: decisionlens_downloads:dlx-ui_5.8.2
     port: 8089
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
   dlc:
     tag: decisionlens_downloads:dlc-service_1.21.49
     port: 8080
     url: http://dlc-service:8080
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
   dlcui:
     tag: decisionlens_downloads:dlc-ui_1.21.49
     port: 8088
     replicas: 1
+    labels: {}
+    selectorLabels: {}
+    annotations: {}
 
 rabbitmq:
   image: 723504183657.dkr.ecr.us-east-1.amazonaws.com/decisionlens_downloads:rabbitmq_3.11.0
