--- a/helm/decisionlens/templates/apigateway-service.yaml
+++ b/helm/decisionlens/templates/apigateway-service.yaml
@@ -5,10 +5,16 @@ metadata:
   name: apigateway-service
   labels:
     {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.apigateway.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   selector:
     app: apigateway
-    {{- include "decisionlens.labels" . | nindent 4 }}
+    {{- include "decisionlens.selectorLabels" . | nindent 4 }}
+  {{- with .Values.service.apigateway.selectorLabels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   ports:
   - protocol: TCP
     port: {{ .Values.service.apigateway.port }}
