--- a/helm/decisionlens/templates/apigateway.yaml
+++ b/helm/decisionlens/templates/apigateway.yaml
@@ -5,8 +5,14 @@ metadata:
   labels:
     app: apigateway
     {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.apigateway.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   annotations:
   {{- with .Values.global.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.service.apigateway.annotations }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
@@ -15,13 +21,22 @@ spec:
     matchLabels:
       app: apigateway
       {{- include "decisionlens.selectorLabels" . | nindent 6 }}
+    {{- with .Values.service.apigateway.selectorLabels }}
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
   template:
     metadata:
       labels:
         app: apigateway
         {{- include "decisionlens.selectorLabels" . | nindent 8 }}
+      {{- with .Values.service.apigateway.selectorLabels }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       annotations:
       {{- with .Values.global.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.service.apigateway.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
