--- a/helm/decisionlens/templates/auth.yaml
+++ b/helm/decisionlens/templates/auth.yaml
@@ -4,9 +4,15 @@ metadata:
   name: auth-deployment
   labels: 
     app: auth
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.auth.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   annotations:
   {{- with .Values.global.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.service.auth.annotations }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
@@ -15,13 +21,22 @@ spec:
     matchLabels:
       app: auth
       {{- include "decisionlens.selectorLabels" . | nindent 6 }}
+    {{- with .Values.service.auth.selectorLabels }}
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
   template:
     metadata:
       labels:
         app: auth
         {{- include "decisionlens.selectorLabels" . | nindent 8 }}
+      {{- with .Values.service.auth.selectorLabels }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       annotations:
       {{- with .Values.global.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.service.auth.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
