--- a/helm/decisionlens/templates/dlc-service.yaml
+++ b/helm/decisionlens/templates/dlc-service.yaml
@@ -6,10 +6,16 @@ metadata:
   labels:
     app: dlc
     {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.dlc.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   selector:
     app: dlc
-    {{- include "decisionlens.labels" . | nindent 4 }}
+    {{- include "decisionlens.selectorLabels" . | nindent 4 }}
+  {{- with .Values.service.dlc.selectorLabels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   ports:
   - protocol: TCP
     port: {{ .Values.service.dlc.port }}
