--- a/helm/decisionlens/templates/dlcui-service.yaml
+++ b/helm/decisionlens/templates/dlcui-service.yaml
@@ -6,10 +6,16 @@ metadata:
   labels:
     app: dlcui
     {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.dlcui.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   selector:
     app: dlcui
-    {{- include "decisionlens.labels" . | nindent 4 }}
+    {{- include "decisionlens.selectorLabels" . | nindent 4 }}
+  {{- with .Values.service.dlcui.selectorLabels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   ports:
   - protocol: TCP
     port: {{ .Values.service.dlcui.port }}
