--- a/helm/decisionlens/templates/dlcui.yaml
+++ b/helm/decisionlens/templates/dlcui.yaml
@@ -4,9 +4,15 @@ metadata:
   name: dlcui-deployment
   labels:
     app: dlcui
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.dlcui.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   annotations:
   {{- with .Values.global.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.service.dlcui.annotations }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
@@ -14,14 +20,23 @@ spec:
   selector:
     matchLabels:
       app: dlcui
-      {{- include "decisionlens.labels.standard" . | nindent 6 }}
+      {{- include "decisionlens.selectorLabels" . | nindent 6 }}
+      {{- with .Values.service.dlcui.selectorLabels }}
+        {{- toYaml . | nindent 6 }}
+      {{- end }}
   template:
     metadata:
       labels:
         app: dlcui
-        {{- include "decisionlens.labels.standard" . | nindent 8 }}
+        {{- include "decisionlens.selectorLabels" . | nindent 8 }}
+      {{- with .Values.service.dlcui.selectorLabels }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       annotations:
       {{- with .Values.global.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.service.dlcui.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:      
