--- a/helm/decisionlens/templates/dlx-ingress.yaml
+++ b/helm/decisionlens/templates/dlx-ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: dlx-ingress
   labels:
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" | nindent 4 }}
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
     {{- with .Values.ingress.dlx.annotations }}
