--- a/helm/decisionlens/templates/messaging-service.yaml
+++ b/helm/decisionlens/templates/messaging-service.yaml
@@ -5,11 +5,17 @@ metadata:
   name: messaging-service
   labels:
     app: messaging
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.messaging.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   selector:
     app: messaging
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.selectorLabels" . | nindent 4 }}
+  {{- with .Values.service.messaging.selectorLabels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   ports:
   - protocol: TCP
     port: {{ .Values.service.messaging.port }} 
