--- a/helm/decisionlens/templates/mldata.yaml
+++ b/helm/decisionlens/templates/mldata.yaml
@@ -4,24 +4,39 @@ metadata:
   name: mldata-deployment
   labels:
     app: mldata
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
-  annotations:
-    {{- with .Values.global.annotations }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.mldata.labels }}
     {{- toYaml . | nindent 4 }}
-    {{- end }}
+  {{- end }}
+  annotations:
+  {{- with .Values.global.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.service.mldata.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.service.mldata.replicas }}
   selector:
     matchLabels:
       app: mldata
       {{- include "decisionlens.selectorLabels" . | nindent 6 }}
+    {{- with .Values.service.mldata.selectorLabels }}
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
   template:
     metadata:
       labels:
         app: mldata
         {{- include "decisionlens.selectorLabels" . | nindent 8 }}
-      {{- with .Values.global.podAnnotations }}
+      {{- with .Values.service.mldata.selectorLabels }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       annotations:
+      {{- with .Values.global.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.service.mldata.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
