--- a/helm/decisionlens/templates/plan-service.yaml
+++ b/helm/decisionlens/templates/plan-service.yaml
@@ -5,11 +5,17 @@ metadata:
   name: plan-service
   labels:
     app: plan
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.plan.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   selector:
     app: plan
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.selectorLabels" . | nindent 4 }}
+  {{- with .Values.service.plan.selectorLabels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   ports:
   - protocol: TCP
     port: {{ .Values.service.plan.port }} 
