--- a/helm/decisionlens/templates/portfolio-service.yaml
+++ b/helm/decisionlens/templates/portfolio-service.yaml
@@ -5,11 +5,17 @@ metadata:
   name: portfolio-service
   labels:
     app: portfolio
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.portfolio.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   selector:
     app: portfolio
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.selectorLabels" . | nindent 4 }}
+  {{- with .Values.service.portfolio.selectorLabels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   ports:
   - protocol: TCP
     port: {{ .Values.service.portfolio.port }} 
