--- a/helm/decisionlens/templates/portfolio.yaml
+++ b/helm/decisionlens/templates/portfolio.yaml
@@ -4,10 +4,16 @@ metadata:
   name: portfolio-deployment
   labels:
     app: portfolio
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
+  {{- with .Values.service.portfolio.labels }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   annotations:
   {{- with .Values.global.annotations }}
     {{- toYaml . | nindent 6 }}
+  {{- end }}
+  {{- with .Values.service.portfolio.annotations }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
   replicas: {{ .Values.service.portfolio.replicas }}
@@ -15,13 +21,22 @@ spec:
     matchLabels:
       app: portfolio
       {{- include "decisionlens.selectorLabels" . | nindent 6 }}
+    {{- with .Values.service.portfolio.selectorLabels }}
+      {{- toYaml . | nindent 6 }}
+    {{- end }}
   template:
     metadata:
       labels:
         app: portfolio
         {{- include "decisionlens.selectorLabels" . | nindent 8 }}
+      {{- with .Values.service.portfolio.selectorLabels }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       annotations:
       {{- with .Values.global.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.service.portfolio.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
