--- a/helm/decisionlens/templates/secret.yaml
+++ b/helm/decisionlens/templates/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: {{ .Release.Name }}-secret
   labels:
-    {{- include "decisionlens.labels.standard" . | nindent 4 }}
+    {{- include "decisionlens.labels" . | nindent 4 }}
 type: Opaque
 data:
   database-username: {{ .Values.database.username | b64enc }}
